--- a/TPO_Front_ecommerce_grupo4/src/components/Checkout.css
+++ b/TPO_Front_ecommerce_grupo4/src/components/Checkout.css
@@ -33,12 +33,14 @@
     font-weight: bold; 
 }
 .nameProductCheckout{
-    font-size: 16px; 
-    margin-bottom: 30px;
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid #ccc;
+    padding: 10px 0;
 }
 
 .nameprecioCheckout{
-    font-size: 16px; 
-    font-weight: bold; 
-    margin-left: 30px; 
+    margin-top: 20px;
+    font-size: 20px; 
+    font-weight: bold;
 }
