--- a/TPO_Front_ecommerce_grupo4/src/components/Cart.css
+++ b/TPO_Front_ecommerce_grupo4/src/components/Cart.css
@@ -18,7 +18,7 @@
     justify-content: space-between; 
     align-items: center; 
     margin-bottom: 20px; 
-    margin-top:60px
+    margin-top: 60px;
 }
 
 .total-pagar {
@@ -51,7 +51,7 @@
 }
 
 .btn-checkout:hover {
-    background-color: #10db2b; 
+    background-color: #0f9e24; 
 }
 
 .products-container {
@@ -61,7 +61,7 @@
 }
 
 .product-item {
-    height: 450px; 
+    height: auto; 
     box-sizing: border-box;
     flex: 1 1 calc(25% - 20px); 
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); 
@@ -69,6 +69,9 @@
     border: 1px solid #ccc; 
     border-radius: 5px; 
     text-align: center; 
+    display: flex; 
+    flex-direction: column; 
+    justify-content: space-between; 
 }
 
 .product-name {
@@ -79,9 +82,27 @@
 .product-price {
     color: #555; 
 }
+
 .product-image {
     width: 100px; 
     height: auto; 
-    margin-right: 10px; 
+    margin-bottom: 10px;
+    max-height: 150px;
+    object-fit: contain 
 }
 
+
+.btn-remove {
+    padding: 5px 10px; 
+    background-color: #131111; 
+    color: white; 
+    border: none; 
+    border-radius: 5px; 
+    cursor: pointer; 
+    transition: background-color 0.3s; 
+    margin-top: 10px; 
+}
+
+.btn-remove:hover {
+    background-color: #ff1a1a; 
+}
