--- a/TPO_Front_ecommerce_grupo4/src/pages/UserProfile.css
+++ b/TPO_Front_ecommerce_grupo4/src/pages/UserProfile.css
@@ -1,13 +1,39 @@
-/* src/pages/UserProfile.css */
-.user-profile {
+.user-profile-container {
     padding: 20px;
+    max-width: 800px;
+    margin: auto;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    background-color: #f9f9f9;
 }
 
-.user-info, .user-transactions {
+.user-info {
     margin-bottom: 20px;
 }
 
-.user-transactions ul {
+h1 {
+    text-align: center;
+    color: #333;
+}
+
+h2 {
+    color: #555;
+}
+
+ul {
     list-style-type: none;
     padding: 0;
+}
+
+li {
+    padding: 10px;
+    border-bottom: 1px solid #ddd;
+}
+
+li:last-child {
+    border-bottom: none;
+}
+
+strong {
+    color: #000;
 }
