--- a/TPO_Front_ecommerce_grupo4/src/index.css
+++ b/TPO_Front_ecommerce_grupo4/src/index.css
@@ -1,4 +1,6 @@
 :root {
+  width: 100%;
+  margin-top: 56px;
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -56,6 +58,7 @@ button:focus-visible {
 
 @media (prefers-color-scheme: light) {
   :root {
+    margin-top: 60px;
     color: #213547;
     background-color: #ffffff;
   }
