--- a/TPO_Front_ecommerce_grupo4/src/index.css
+++ b/TPO_Front_ecommerce_grupo4/src/index.css
@@ -58,6 +58,7 @@ button:focus-visible {
 
 @media (prefers-color-scheme: light) {
   :root {
+    width: 100%;
     margin-top: 60px;
     color: #213547;
     background-color: #ffffff;
