--- a/TPO_Front_ecommerce_grupo4/src/components/product/ProductCard/ProductCard.css
+++ b/TPO_Front_ecommerce_grupo4/src/components/product/ProductCard/ProductCard.css
@@ -12,8 +12,8 @@ a:link, a:visited, a:active {
   text-decoration:none;
 }
 .title{
+  width: 200px;
   height: 50px;
-  vertical-align: middle;
 }
 
 .price{
